--- a/styles/layout/templates/_ultima.scss
+++ b/styles/layout/templates/_ultima.scss
@@ -2,31 +2,13 @@
     .template {
         &-hero {
 
-            &-dashboard1 {
-                z-index: 4;
-                position: absolute;
-                top: 2.44rem;
-                left: 60rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
-
-            &-dashboard2 {
-                z-index: 3;
-                position: absolute;
-                top: 2.44rem;
-                left: 42rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
-
             &-pattern {
                 width: 60rem;
                 height: auto;
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                z-index: 12;
+                z-index: 6;
             }
 
         }
@@ -34,23 +16,10 @@
 
 }
 
-@include mobile {
+@media only screen and (max-width: 768px) {
     .ultima {
         .template {
             &-hero {
-                &-dashboard1 {
-                    border-radius: 0.375rem;
-                    top: 28.5rem;
-                    left: 12rem;
-                    width: 28rem;
-                }
-
-                &-dashboard2 {
-                    border-radius: 0.375rem;
-                    top: 28.5rem;
-                    left: 1.5rem;
-                    width: 28rem;
-                }
 
                 &-pattern {
                     width: 80rem;
