--- a/styles/layout/templates/_apollo.scss
+++ b/styles/layout/templates/_apollo.scss
@@ -2,39 +2,13 @@
     .template {
         &-hero {
 
-            &-card {
-                // border: 1px solid rgba(255, 255, 255, 0.24);
-                // background: linear-gradient(180deg, rgba(170, 140, 255, 0.00) 0%, rgba(170, 140, 255, 0.80) 100%), rgba(255, 255, 255, 0.10);
-                // box-shadow: 0px 2px 4px 0px rgba(255, 255, 255, 0.24) inset, 0px 48px 80px 0px rgba(0, 0, 0, 0.08), 0px -5px 13px -2px rgba(255, 255, 255, 0.55) inset;
-                // backdrop-filter: blur(2px);
-
-            }
-
-            &-dashboard1 {
-                z-index: 7;
-                position: absolute;
-                top: 2.02rem;
-                left: 60rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
-
-            &-dashboard2 {
-                z-index: 6;
-                position: absolute;
-                top: 2.02rem;
-                left: 42rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
-
             &-pattern {
                 width: 96rem;
                 height: auto;
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                z-index: 1;
+                z-index: 6;
                 mix-blend-mode: overlay;
             }
         }
@@ -42,22 +16,10 @@
 
 }
 
-@include mobile {
+@media only screen and (max-width: 768px) {
     .apollo {
         .template {
             &-hero {
-                &-dashboard1 {
-                    top: 28.5rem;
-                    left: 12rem;
-                    width: 28rem;
-                }
-
-                &-dashboard2 {
-                    top: 28.5rem;
-                    left: 1.5rem;
-                    width: 28rem;
-                }
-
                 &-pattern {
                     width: 90rem;
                 }
