--- a/styles/layout/templates/_diamond.scss
+++ b/styles/layout/templates/_diamond.scss
@@ -1,59 +1,41 @@
 .diamond {
     .template {
         &-hero {
-
-            &-dashboard1 {
-                z-index: 7;
-                position: absolute;
-                top: 2.02rem;
-                left: 60rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
-
-            &-dashboard2 {
-                z-index: 6;
-                position: absolute;
-                top: 2.02rem;
-                left: 42rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
-
             &-pattern {
                 width: 62.3125rem;
                 height: 44.8125rem;
                 position: absolute;
                 top: -3.62;
                 left: -3.06;
-                z-index: 1;
+                z-index: 6;
             }
         }
     }
 
 }
-
-@include mobile {
+@media only screen and (max-width: 1200px) {
     .diamond {
         .template{
             &-hero {
-    
-                &-dashboard1 {
-                    top: 28.5rem;
-                    left: 12rem;
-                    width: 28rem;
-                }
-    
-                &-dashboard2 {
-                    top: 28.5rem;
-                    left: 1.5rem;
-                    width: 28rem;
-                }
-    
                 &-pattern {
                     width: 60rem;
                     height: auto;
-                    bottom: 0;
+                    bottom: -8rem;
+                    left: -8rem;
+                }
+            }
+        }
+
+    }
+}
+@media only screen and (max-width: 768px) {
+    .diamond {
+        .template{
+            &-hero {
+                &-pattern {
+                    width: 64rem;
+                    height: auto;
+                    bottom: 2rem;
                     left: -8rem;
                 }
             }
