--- a/styles/layout/templates/_freya.scss
+++ b/styles/layout/templates/_freya.scss
@@ -1,23 +1,6 @@
 .freya {
     .template {
         &-hero {
-            &-dashboard1 {
-                z-index: 4;
-                position: absolute;
-                top: 2.02rem;
-                left: 60rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
-
-            &-dashboard2 {
-                z-index: 3;
-                position: absolute;
-                top: 2.02rem;
-                left: 42rem;
-                width: 37.875rem;
-                box-shadow: 0px 0px 43.64997px 0px rgba(0, 0, 0, 0.12);
-            }
 
             &-pattern {
                 height: 26rem;
@@ -25,7 +8,7 @@
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                z-index: 10;
+                z-index: 6;
                 mix-blend-mode: screen;
             }
         }
@@ -33,22 +16,10 @@
 
 }
 
-@include mobile {
+@media only screen and (max-width: 768px) {
     .freya {
         .template {
             &-hero {
-
-                &-dashboard1 {
-                    top: 28.5rem;
-                    left: 12rem;
-                    width: 28rem;
-                }
-
-                &-dashboard2 {
-                    top: 28.5rem;
-                    left: 1.5rem;
-                    width: 28rem;
-                }
 
                 &-pattern {
                     width: 70rem;
